# capsule_contact

./: CMakeLists.txt  README.md  main.cpp  test_eigen.cpp  test_gte.cpp
include/: capsule_contact_manifold_qr.h
